--- a/VTT1721050533/Web.config
+++ b/VTT1721050533/Web.config
@@ -56,4 +56,8 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+	</entityFramework>
+	<connectionStrings>
+		<add name="QL" connectionString="data source=DESKTOP-RI67TA0\SQLEXPRESS;initial catalog=QL;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
