--- a/VTT1721050533/VTT1721050533.csproj
+++ b/VTT1721050533/VTT1721050533.csproj
@@ -134,11 +134,6 @@
     <Compile Include="Models\QL.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Lecture\Create.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Create.edmx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -176,19 +171,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <EntityDeploy Include="Views\Lecture\Create.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Create.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Views\Lecture\Create.edmx.diagram">
-      <DependentUpon>Create.edmx</DependentUpon>
-    </Content>
-    <Content Include="Views\Lecture\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Lecture\" />
     <Folder Include="Views\Person\" />
-    <Folder Include="Views\Shared\Student\" />
+    <Folder Include="Views\Student\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
